--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: html
-rvm:
+sudo: false
+html:
 - 1.1.1
 - 1.1.2
 - 1.1.3
 - 1.1.4
 - 1.1.5
-
+script: index.html
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
