--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ html:
 - 1.1.3
 - 1.1.4
 - 1.1.5
-script: index.html
+script: https://travis-ci.org/Peeragogy/Peeragogy-Dashboard.svg?branch=master
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
