--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,11 @@ html:
 - 1.1.3
 - 1.1.4
 - 1.1.5
-before_script:
-  - go vet ./...
 install:
   - export GOPATH="${https://travis-ci.org/Peeragogy/Peeragogy-Dashboard.svg?branch=master}/Godeps/_workspace:$GOPATH"
   - export PATH="${https://travis-ci.org/Peeragogy/Peeragogy-Dashboard.svg?branch=master/_workspace/bin:$PATH"
-
+  
+exclude: [vendor]
 
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
